Closed
Bug 1900797
Opened 8 months ago
Closed 8 months ago
Perma [Tier-2] ios /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm:210:5: error: unannotated fall-through between switch labels [-Werror,-Wimplicit-fallthrough]
Categories
(Core :: Widget, defect)
Core
Widget
Tracking
()
RESOLVED
FIXED
128 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox126 | --- | unaffected |
firefox127 | --- | unaffected |
firefox128 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jjaschke)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell unknown])
Attachments
(1 file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=461158781&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Jg3l98e4RmeDCD5JhWyGPA/runs/0/artifacts/public/logs/live_backing.log
[task 2024-06-05T13:48:05.378Z] 13:48:05 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -isysroot /builds/worker/fetches/iPhoneOS17.4.sdk -mios-version-min=17.4 --target=aarch64-apple-ios -o xpcshell.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -fvisibility=hidden -fvisibility-inlines-hidden -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/xpconnect/shell -I/builds/worker/workspace/obj-build/js/xpconnect/shell -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-rtti -pthread -fno-sized-deallocation -fno-aligned-new -ffunction-sections -fdata-sections -fno-math-errno -fno-exceptions -fno-exceptions -fPIC -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wduplicate-method-arg -Wduplicate-method-match -Wmissing-method-return-type -Wobjc-signed-char-bool -Wsemicolon-before-method-body -Wsuper-class-method-mismatch -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/xpcshell.o.pp /builds/worker/checkouts/gecko/js/xpconnect/shell/xpcshell.cpp
[task 2024-06-05T13:48:05.378Z] 13:48:05 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/js/xpconnect/shell'
[task 2024-06-05T13:48:05.380Z] 13:48:05 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/js/xpconnect/shell'
[task 2024-06-05T13:48:05.380Z] 13:48:05 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/js/xpconnect/shell'
[task 2024-06-05T13:48:05.388Z] 13:48:05 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec/aarch64'
[task 2024-06-05T13:48:05.389Z] 13:48:05 INFO - mkdir -p '.deps/'
[task 2024-06-05T13:48:05.390Z] 13:48:05 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec/aarch64'
[task 2024-06-05T13:48:05.390Z] 13:48:05 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/uikit'
[task 2024-06-05T13:48:05.393Z] 13:48:05 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ -isysroot /builds/worker/fetches/iPhoneOS17.4.sdk -mios-version-min=17.4 --target=aarch64-apple-ios -o nsLookAndFeel.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -fvisibility=hidden -fvisibility-inlines-hidden -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/widget/uikit -I/builds/worker/workspace/obj-build/widget/uikit -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/widget -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-rtti -pthread -fno-sized-deallocation -fno-aligned-new -ffunction-sections -fdata-sections -fno-math-errno -fno-exceptions -fno-exceptions -fPIC -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wduplicate-method-arg -Wduplicate-method-match -Wmissing-method-return-type -Wobjc-signed-char-bool -Wsemicolon-before-method-body -Wsuper-class-method-mismatch -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/nsLookAndFeel.o.pp -x objective-c++ -fobjc-exceptions -fobjc-abi-version=2 -fobjc-legacy-dispatch /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm
[task 2024-06-05T13:48:05.394Z] 13:48:05 ERROR - /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm:210:5: error: unannotated fall-through between switch labels [-Werror,-Wimplicit-fallthrough]
[task 2024-06-05T13:48:05.394Z] 13:48:05 INFO - 210 | default:
[task 2024-06-05T13:48:05.394Z] 13:48:05 INFO - | ^
[task 2024-06-05T13:48:05.395Z] 13:48:05 INFO - /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm:210:5: note: insert 'DISPATCH_FALLTHROUGH;' to silence this warning
[task 2024-06-05T13:48:05.395Z] 13:48:05 INFO - 210 | default:
[task 2024-06-05T13:48:05.395Z] 13:48:05 INFO - | ^
[task 2024-06-05T13:48:05.396Z] 13:48:05 INFO - | DISPATCH_FALLTHROUGH;
[task 2024-06-05T13:48:05.396Z] 13:48:05 INFO - /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm:210:5: note: insert 'break;' to avoid fall-through
[task 2024-06-05T13:48:05.397Z] 13:48:05 INFO - 210 | default:
[task 2024-06-05T13:48:05.397Z] 13:48:05 INFO - | ^
[task 2024-06-05T13:48:05.397Z] 13:48:05 INFO - | break;
[task 2024-06-05T13:48:05.398Z] 13:48:05 INFO - 1 error generated.
[task 2024-06-05T13:48:05.398Z] 13:48:05 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:702: nsLookAndFeel.o] Error 1
[task 2024-06-05T13:48:05.398Z] 13:48:05 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/widget/uikit'
[task 2024-06-05T13:48:05.399Z] 13:48:05 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/widget/uikit'
[task 2024-06-05T13:48:05.399Z] 13:48:05 INFO - widget/uikit/nsWidgetFactory.o
Updated•8 months ago
|
Severity: S4 → --
Flags: needinfo?(jjaschke)
Priority: P5 → --
Summary: Perma [Tier-2] /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm:210:5: error: unannotated fall-through between switch labels [-Werror,-Wimplicit-fallthrough] → Perma [Tier-2] ios /builds/worker/checkouts/gecko/widget/uikit/nsLookAndFeel.mm:210:5: error: unannotated fall-through between switch labels [-Werror,-Wimplicit-fallthrough]
Assignee | ||
Comment 1•8 months ago
|
||
Updated•8 months ago
|
Assignee: nobody → jjaschke
Status: NEW → ASSIGNED
Pushed by sstanca@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a6f632ba4c97
Added missing `break` in switch statement. r=sstanca
Comment 4•8 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 months ago
status-firefox128:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
Comment 5•8 months ago
|
||
Set release status flags based on info from the regressing bug 1867940
status-firefox126:
--- → unaffected
status-firefox127:
--- → unaffected
status-firefox-esr115:
--- → unaffected
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•