Bug 1900797 - Added missing `break` in switch statement. r=sstanca

Differential Revision: https://phabricator.services.mozilla.com/D212695